Layout: Fix checkbox center align in special rows

--- a/css/jsgrid.css
+++ b/css/jsgrid.css
@@ -56,6 +56,12 @@
     width: 90%;
 }
 
+.jsgrid-filter-row input[type='checkbox'],
+.jsgrid-edit-row input[type='checkbox'],
+.jsgrid-insert-row input[type='checkbox'] {
+    width: auto;
+}
+
 .jsgrid-header-row > th,
 .jsgrid-filter-row > td,
 .jsgrid-insert-row > td,
